fix alignment issue and text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container__element container__element--study">
         <div class="container__element--inner">
           <div class="container__inner--header">
-            <p class="container__inner--header-type">work</p>
+            <p class="container__inner--header-type">study</p>
             <img src="./images/icon-ellipsis.svg" alt="ellipsis" />
           </div>
           <h2 class="container__inner--text">4 hours</h2>
